--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ install:
 - pip install -r test-requirements.txt
 - pip install coveralls
 script:
-- tox
+- tox 'Django>=1.8,<2'
 after_success: coveralls
 # Set password via "travis encrypt --add deploy.password"; for details, see
 # https://docs.travis-ci.com/user/deployment/pypi
